# binary-gpos-compaction

./: .gitignore  README.md  combinedcsvs.csv  pyproject.toml
gpos_compaction/: __main__.py
gpos_compression_by_tetris/: __main__.py  compact_kern_feature_writer.py
scripts/: aggregate-csvs.ps1  run-on-google-fonts.ps1
tests/: test_gpos_compression_by_tetris.py
